# ETL-pipeline-simulation

./: .gitignore  README.md  run.sh
airflow/: .env  Dockerfile  docker-compose.yaml  requirement.txt
airflow/dags/: etl_excel.py
database_and_api/: .env  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
database_and_api/app/: .env
database_and_api/app/config/: settings.py
database_and_api/app/models/: index_frame_h1.py  index_frame_m1.py  index_name.py
database_and_api/app/routers/: etl_excel.py
database_and_api/app/schemas/: index_frame_h1.py  index_frame_m1.py  index_name.py
