[tool.poetry]
name = "ETL-basics"
version = "0.1.0"
description = ""
authors = ["KHANG LUONG <khanglv@vmodev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.85.0"
python = "^3.10"
pydantic = "^1.10.2"
psycopg2 = "^2.9.4"
SQLAlchemy = "^1.4.41"
loguru = "^0.6.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
graypy = "^2.1.0"
pandas = "^1.5.3"
openpyxl = "^3.1.1"



[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
